--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Virtual-E</string>
     <string name="title_activity_main">Virtual-E</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="fileprovider_authority">io.ionic.starter.fileprovider</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">com.example.app</string>
+    <string name="fileprovider_authority">com.example.app.fileprovider</string>
+    <string name="custom_url_scheme">com.example.app</string>
 </resources>
